<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Just buying</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit_products_list">Products</string>
    <string name="addItemHint">Enter product name</string>
    <string name="cross">Cross</string>
    <string name="product_name_hint">Enter a product name</string>
    <string name="product_picture">Product picture</string>
    <string name="save">Save</string>
    <string name="input_shopping_list_name">Input shopping list name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="new_product">New product</string>
    <string name="product_title">Product</string>
    <string name="edit">Edit</string>
    <string name="in_shop">In shop</string>
    <string name="delete_shopping_list_question">Delete shopping list?</string>
    <string name="in_shop_ending_work_message">Done</string>
    <string name="change_list_name">Rename</string>
    <string name="product_image">Product image</string>
    <string name="view_holder" translatable="false">view_holder</string>
    <string name="pref_title">Settings</string>
    <string name="pref_cross_out_action">Cross out product</string>
    <string name="pref_key_cross_out_action" translatable="false">pref_key_cross_out_action</string>
    <string name="pref_cross_out_action_summary">Check a product by crossing out or just clicking</string>
    <string name="item_image">Product image</string>
    <string name="share">Share</string>
    <string name="delete">Remove</string>
    <string name="pref_key_show_images" translatable="false">Show images</string>
    <string name="pref_show_images">Show images</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="pref_key_email_host" translatable="false">pref_key_email_host</string>
    <string name="pref_key_email_port" translatable="false">pref_key_email_port</string>
    <string name="pref_key_email_login" translatable="false">pref_key_email_login</string>
    <string name="pref_key_email_password" translatable="false">pref_key_email_password</string>
    <string name="json_file_identifier" translatable="false">ShoppingList</string>
    <string name="wrong_email_protocol_exception_message">Supports only IMAP protocol</string>
    <string name="not_assigned">Not assigned</string>
    <string name="password_mask" translatable="false">******</string>
    <string name="action_receive_shopping_list_by_email">Receive shopping list by email</string>
    <string name="send">Send</string>
    <string name="loaded">loaded</string>
    <string name="action_save_list">Save list</string>
    <string name="action_remove_all_items">Remove all items</string>
    <string name="action_go_to_in_shop_activity">Go to in shop activity</string>
    <string name="action_filter">Filter</string>
    <string name="action_edit_shopping_list">Edit</string>
    <string name="loading">Loading…</string>
    <string name="no_emails_for_loading">There are not any emails for loading</string>
    <string name="new_list">New list</string>
    <string name="HelpInShop1">Swipe to cross out items. To undo crossing out, swipe again.\n\nYou can change the way of crossing out (by click) in the settings.\n</string>
    <string name="pref_key_show_help_screens">Show help</string>
    <string name="got_it">Got it</string>
    <string name="action_edit_categories_list">Categories</string>
    <string name="item_already_added">Item was added before</string>
    <string name="category">Category:</string>
    <string name="new_category">New category</string>
    <string name="category_title">Category</string>
    <string name="choose_category">Choose category…</string>
    <string name="three_dots" translatable="false">%1$s…</string>
    <string name="category_not_assigned">Category was not assigned</string>
    <string name="order">Order</string>
    <string name="no_name">No name</string>
    <string name="product_is_exist">Product with the same name is already exist.</string>
    <string name="divider" translatable="false">,</string>
    <string name="product_divider" translatable="false">;</string>
    <string name="load">Load</string>
    <string name="text_for_loading">Type or paste text in this format:\nMilk, 2;  Bread, 1; Wine, 3</string>
    <string name="menu_button_identifier">More options</string>
    <string name="without_category">Without category</string>
    <string name="pref_key_show_categories" translatable="false">pref_key_show_categories</string>
    <string name="pref_show_categories">Show categories</string>
    <string name="default_order" translatable="false">100</string>
    <string name="enter_order">Enter order</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_email" translatable="false">d.zhiharev83@gmail.com</string>
    <string name="email_body_divider" translatable="false">--------------------------------------------------</string>
    <string name="HelpInShop2">To edit shopping list press button</string>
    <string name="HelpMain1">Welcome!\n\nThere are all yours shopping lists.\nAdd new lists, send by the e-mail and load them.</string>
    <string name="pref_show_images_summary">Show products and categories with images</string>
    <string name="pref_show_categories_summary">Separate products in window \"In shop\"</string>
    <string name="main_activity_title">All shopping lists</string>
    <string name="pref_key_show_help_in_main_activity" translatable="false">pref_key_show_help_in_main_screen</string>
    <string name="action_remove_checked">Remove checked products</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-4981714129483110/3643326589</string>
    <string name="email_activity_not_found_exception_text">Not found email client application</string>
    <string name="category_name_hint">Enter category name</string>
    <string name="main_activity_no_data_text">Add the first shopping list</string>
    <string name="categories_list_activity_no_data_text">Add new categories</string>
    <string name="choose_category_activity_no_data_text">Categories list is empty</string>
    <string name="in_shop_activity_no_data_text">Shopping list is empty</string>
    <string name="editing_activity_no_data_text">Shopping list is empty. Add products.</string>
    <string name="products_list_activity_no_data_text">Add new products.</string>
    <string name="mode">Choose mode</string>
    <string name="estimate">Estimate app</string>
    <string name="pref_key_show_activity_opening_option_choice" translatable="false">pref_key_show_activity_opening_option_choice</string>
    <string name="pref_show_activity_opening_option_choice_summary">Show choose mode dialog after click on shopping list in main screen</string>
    <string name="pref_show_activity_opening_option_choice">Show choose mode dialog</string>
    <string name="action_deselect_all">Deselect all products</string>
    <string name="def_user_name">Not signed in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_profile">Profile</string>
    <string name="google_sign_in">Google Sign-In</string>
    <string name="profile_progress_message">Signing in…</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_friends">Friends</string>
    <string name="input_friends_email">Input friend\'s e-mail</string>
    <string name="search_friend">Search friend</string>
    <string name="searching">Searching…</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="user_not_found" tools:ignore="UnusedResources">User has not been found by this e-mail</string>
    <string name="authentication">Authentication</string>
    <string name="friend_photo">Friend\'s photo</string>
    <string name="friends_no_data_text">Friends list is empty. Add new friends!</string>
    <string name="connection_timeout_exceeded">Connection timeout exceeded</string>
    <string name="send_to_friend">Send to friend</string>
    <string name="shopping_list_transfer_error">Shopping list transfer error</string>
    <string name="sending">Sending…</string>
    <string name="sent_successfully">Sent successfully</string>
    <string name="action_receive_shopping_lists">Receive shopping lists</string>
    <string name="no_shopping_for_loading">There are no shopping lists to download</string>
    <string name="receiving">Receiving…</string>
    <string name="received_new_shopping_lists">Received new shopping lists:</string>
    <string name="error_saving_user_data">Couldn\'t save user data:</string>
    <string name="log_in_suggestion">Log in, please</string>
    <string name="received_new_shopping_lists_summary">New shopping lists uploaded</string>
    <string name="from">from</string>
    <string name="action_black_list">Black list</string>
    <string name="action_black_list_no_data_text">Black list is empty</string>
    <string name="message_from_user_not_in_friends">User not from friends list sent you shopping list.</string>
    <string name="new_user_sent_list">New user %1$s! sent shopping list for you.</string>
    <string name="add_to_friends_and_receive_list">Receive</string>
    <string name="add_to_black_list_and_decline_list">Ignore</string>
    <string name="arrow" translatable="false">arrow</string>
    <string name="invitation_title">Thanks for recommendations!</string>
    <string name="invitation_message">Get "Just buying"!</string>
    <string name="invitation_call_to_action_text">Download to phone</string>
    <string name="invite_friends">Invite friends</string>
    <string name="market_app_link" translatable="false">market://details?id=com.RightDirection.ShoppingList</string>
    <string name="wrong_email_dialog_question">This user is not registered yet. Should I send him an invitation?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="friend_invitation_question">This application is an electronic shopping list JustBuying. Download and register ;)</string>
    <string name="pref_key_sort_shopping_lists_in_reverse_order" translatable="false">pref_key_sort_shopping_lists_in_reverse_order</string>
    <string name="pref_sort_shopping_lists_in_reverse_order">Shopping lists sort order</string>
    <string name="pref_key_sort_shopping_lists_in_reverse_order_summary">New shopping list will be added to the beginning</string>
    <string name="show_product_image">Show product image</string>
    <string name="clear_product_image">Clear product image</string>
    <string name="product_image_activity_title">Image of %1$s</string>
    <string name="pref_key_show_prices" translatable="false">pref_key_show_prices</string>
    <string name="pref_show_prices">Show prices</string>
    <string name="shopping_list_info">Total sum: %1$s. Left to by on: %2$s</string>
    <string name="count">Qty:</string>
    <string name="price">Price:</string>
    <string name="default_unit">pc.</string>
    <string name="enter_price">Enter price</string>
    <string name="unit">Unit:</string>
    <string name="pref_key_show_units" translatable="false">pref_key+show_units</string>
    <string name="pref_show_units">Show units</string>
    <string name="unit_not_named">Unit was not named</string>
    <string name="units_list_activity_no_data_text">Add new unit</string>
    <string name="unit_name_hint">Enter unit short name</string>
    <string name="short_name">Short name:</string>
    <string name="action_edit_units_list">Units</string>
    <string name="choose_unit_activity_no_data_text">Units list is empty</string>
    <string name="unit_title">Unit</string>
    <string name="new_unit">New unit</string>
    <string name="props_text_with_price_and_unit">price: %1$s, %2$s %3$s</string>
    <string name="props_text_with_price_only">price: %1$s, %2$s</string>
    <string name="props_text_with_unit_only">%1$s %2$s</string>
    <string name="price_change_graph">Price change graph</string>
    <string name="unit_name" translatable="false">%1$s, %2$s</string>
    <string name="navigation_drawer_open" tools:ignore="UnusedResources">Open navigation drawer</string>
    <string name="navigation_drawer_close" tools:ignore="UnusedResources">Close navigation drawer</string>
    <string name="how_to_edit_shopping_list">How to edit shopping list</string>
    <string name="how_to_cross_out_products">How to cross out products</string>
    <string name="firebase_exchanging">Getting shopping lists…</string>
    <string name="pick_category_custom_image">Pick custom image</string>
</resources>
