<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCategoryImages"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:clipChildren="false"
        tools:listitem="@layout/grid_item_category_image" />

    <Button
        android:text="@string/without_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnCategoryEmpty" />

    <Button
        android:id="@+id/btnPickCustomCategoryImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pick_category_custom_image" />

</LinearLayout>